@@ -6,6 +6,9 @@
 
 	<div id="ps-page-title">
 		<div class="inner">
+		<span>
+			<a href="division.php?id={$id}{if $season}&season={$season}{/if}" title="<#Clear Sorts#>" alt="<#Clear Sorts#>"><img id="ps-search-clear" src="{theme->url}/img/icons/turd.gif"></a>
+		</span>
 		<h1><#Standings#> :: {$division.divisionname|escape} <#Division#></h1>
 		<h2><#season#> <strong>{$division.season}</strong> :: <strong>{$division.advanced.0.games_played}</strong> <#games played#> :: <strong>{$division.advanced.0.games_remaining}</strong> <#games remaining#></h2>
 		</div>
